--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,6 +228,31 @@ build:orig:debian:buster:amd64:
       - output/*
       - checksums
 
+build:orig:debian:buster:amd642:
+  variables:
+    DISTRO: "debian"
+    RELEASE: "buster"
+    ARCH: "amd64"
+    SAVE_ORIG: "true"
+  dependencies:
+    - build:image:debian:buster:amd64
+    - build:image:debian:buster:armhf
+    - build:image:debian:buster:arm64
+    - build:image:debian:bullseye:amd64
+    - build:image:debian:bullseye:armhf
+    - build:image:debian:bullseye:arm64
+    - build:image:ubuntu:bionic:amd64
+    - build:image:ubuntu:bionic:armhf
+    - build:image:ubuntu:bionic:arm64
+    - build:image:ubuntu:focal:amd64
+    - build:image:ubuntu:focal:armhf
+    - build:image:ubuntu:focal:arm64
+  extends: .template:build:orig
+  artifacts:
+    paths:
+      - output/*
+      - checksums
+
 build:packages:debian:buster:amd64:
   variables:
     DISTRO: "debian"
@@ -264,7 +289,7 @@ build:packages:debian:bullseye:amd64:
     RELEASE: "bullseye"
     ARCH: "amd64"
   dependencies:
-    - build:orig:debian:buster:amd64
+    - build:orig:debian:buster:amd642
     - build:image:debian:buster:amd64
     - build:image:debian:bullseye:amd64
   extends: .template:build:packages
