--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -382,7 +382,7 @@ test:acceptance:
     - git submodule sync --recursive
     - git submodule update --init --recursive
   script:
-    - apk --update --no-cache add python3 py3-pip gcc openssh make openssl-dev
+    - apk --update --no-cache add python3 py3-pip gcc openssh-client make openssl-dev
       libffi-dev libc-dev python3-dev bash musl-dev rust cargo
     - cd tests
     - pip3 install -r requirements.txt
