ci: Switch to `needs` for the job building the orig tarballs
This is a tiny but valuable optimization, because the native images are
built slightly faster that the one for cross compiling, so this stage
can start earlier than using `depends`.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -180,7 +180,7 @@ build:orig:debian:buster:amd64:
     - mender-qa-slave
   services:
     - docker:dind
-  dependencies:
+  needs:
     - build:image:debian:buster:amd64
   variables:
     DISTRO: "debian"
