feat: Do not publish more orig files than needed.
The publication of the packages to the apt-repo left some orig files.
It turns out those were unreferenced orig files coming from two sources:

* opensource/orig/ directory: where we store the orig file in ci pipeline
* orig files copied during the binary package build that got propagated
  but never had an entry in the .changes file

We do not need to publish the `orig` directory nor the unreferenced
orig files. This patch takes care of that.

Changelog: Title
Ticket: MEN-5879
Signed-off-by: Peter Grzybowski <peter@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -506,7 +506,7 @@ test:acceptance:
   script:
     # Upload files: first .buildinfo and .deb, then .changes
     - for d in output/opensource/*; do
-    -   find "$d" -name '*.buildinfo' -o -name '*.deb' -o -name '*.orig.tar.*' -o -name '*.debian.tar.*' -o -name '*.dsc' | while read -r file; do
+    -   find "$d" \( -name '*.buildinfo' -o -name '*.deb' -o -name '*.orig.tar.*' -o -name '*.debian.tar.*' -o -name '*.dsc' \) -and -not -path "${d}/orig/*" | while read -r file; do
     -     aws s3 cp "$file" "s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/${d}/"
     -   done
     -   find "$d" -name '*.changes' | while read -r file; do
