--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -231,6 +231,8 @@ build:orig:debian:buster:amd64:
   artifacts:
     paths:
       - output/*
+    exclude:
+      - output/opensource/orig/*
 
 build:packages:debian:buster:amd64:
   variables:
@@ -506,7 +508,7 @@ test:acceptance:
   script:
     # Upload files: first .buildinfo and .deb, then .changes
     - for d in output/opensource/*; do
-    -   find "$d" \( -name '*.buildinfo' -o -name '*.deb' -o -name '*.orig.tar.*' -o -name '*.debian.tar.*' -o -name '*.dsc' \) -and -not -path "${d}/orig/*" | while read -r file; do
+    -   find "$d" -name '*.buildinfo' -o -name '*.deb' -o -name '*.orig.tar.*' -o -name '*.debian.tar.*' -o -name '*.dsc' | while read -r file; do
     -     aws s3 cp "$file" "s3://$S3_BUCKET_NAME/$S3_BUCKET_REPO_PATH/${d}/"
     -   done
     -   find "$d" -name '*.changes' | while read -r file; do
