ci: Clean-up unused variables
As a follow-up from 03d5e23 which went missing at 555b8d2.

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,10 +19,8 @@ variables:
   S3_BUCKET_REPO_PATH: "repos/debian/incoming"
   # Scripts folder subpath
   S3_BUCKET_SCRIPTS_PATH: "repos/scripts"
-  # GPG keys for build and distribution, to be set by CI/CD variables
+  # GPG key for build, to be set by CI/CD variables
   GPG_PRIV_KEY_BUILD: ""
-  GPG_PUB_KEY_BUILD: ""
-  GPG_PRIV_KEY_DIST: ""
   # Whether to run acceptance tests.
   TEST_MENDER_DIST_PACKAGES: "true"
   # Whether to publish packages automatically - they can always be published manually
