--- a/recipes/mender-client/debian-3.0.x/rules
+++ b/recipes/mender-client/debian-3.0.x/rules
@@ -7,7 +7,7 @@ override_dh_auto_build:
 	make CGO_CFLAGS="${CGO_CFLAGS}" CGO_LDFLAGS="${CGO_LDFLAGS}" CC="${CC}" \
 	GOOS=linux CGO_ENABLED=1 build
 
-install_targets_exclude=install-systemd install-modules-gen
+install_targets_exclude=install-systemd
 install_targets_all=$(shell grep -E '^install\-.*:' Makefile | cut -d: -f1)
 install_targets=$(filter-out $(install_targets_exclude),$(install_targets_all))
 override_dh_auto_install:
