--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,17 @@ variables:
   # Workaround for GitLab intermittent networking
   FF_NETWORK_PER_BUILD: 1
 
+# NOTE: To add distributions, modify first the matrix in mender-test-containers repository
+.mender-dist-packages-image-matrix:
+  parallel:
+    matrix:
+      - DISTRO: debian
+        RELEASE: [buster, bullseye]
+        ARCH: [amd64, armhf, arm64]
+      - DISTRO: ubuntu
+        RELEASE: [bionic, focal, jammy]
+        ARCH: [amd64, armhf, arm64]
+
 include:
   - project: 'Northern.tech/Mender/mendertesting'
     file: '.gitlab-ci-check-commits-signoffs.yml'
@@ -39,140 +50,10 @@ include:
     file: '.gitlab-ci-github-status-updates.yml'
 
 stages:
-  - build:images
   - build:orig
   - build:packages
   - test
   - publish
-
-.template:build:image:
-  stage: build:images
-  image: docker:git
-  tags:
-    - mender-qa-worker-generic
-  services:
-    - docker:dind
-  before_script:
-    - apk --update --no-cache add bash curl aws-cli
-    - eval "$(curl https://raw.githubusercontent.com/mendersoftware/mendertesting/master/mender-ci-common.sh)"
-  script:
-    # GPG key is available only in protected branches
-    - if [ "$GPG_PRIV_KEY_BUILD" != "" ]; then
-    -   GPG_KEY_BUILD="$GPG_PRIV_KEY_BUILD"
-        ./docker-build-image $DISTRO $RELEASE $ARCH
-    - else
-    -   ./docker-build-image $DISTRO $RELEASE $ARCH
-    - fi
-    - docker save mendersoftware/mender-dist-packages:builder-$DISTRO-$RELEASE-$ARCH -o builder-$DISTRO-$RELEASE-$ARCH.tar
-    - mender_ci_save_tmp_artifact builder-$DISTRO-$RELEASE-$ARCH.tar
-  artifacts:
-    paths:
-      - checksums
-
-build:image:debian:buster:amd64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:debian:buster:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:debian:buster:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "arm64"
-  extends: .template:build:image
-
-build:image:debian:bullseye:amd64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:debian:bullseye:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:debian:bullseye:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "arm64"
-  extends: .template:build:image
-
-build:image:ubuntu:bionic:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:ubuntu:bionic:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:ubuntu:bionic:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "arm64"
-  extends: .template:build:image
-
-build:image:ubuntu:focal:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:ubuntu:focal:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:ubuntu:focal:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "arm64"
-  extends: .template:build:image
-
-build:image:ubuntu:jammy:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "jammy"
-    ARCH: "amd64"
-  extends: .template:build:image
-
-build:image:ubuntu:jammy:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "jammy"
-    ARCH: "armhf"
-  extends: .template:build:image
-
-build:image:ubuntu:jammy:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "jammy"
-    ARCH: "arm64"
-  extends: .template:build:image
 
 build:orig:debian:buster:amd64:
   stage: build:orig
@@ -181,17 +62,10 @@ build:orig:debian:buster:amd64:
     - mender-qa-worker-generic
   services:
     - docker:dind
-  needs:
-    - build:image:debian:buster:amd64
   variables:
     DISTRO: "debian"
     RELEASE: "buster"
     ARCH: "amd64"
-  before_script:
-    - apk --update --no-cache add bash curl aws-cli
-    - eval "$(curl https://raw.githubusercontent.com/mendersoftware/mendertesting/master/mender-ci-common.sh)"
-    - mender_ci_load_tmp_artifact builder-$DISTRO-$RELEASE-$ARCH.tar
-    - docker load -i builder-$DISTRO-$RELEASE-$ARCH.tar
   script:
     - apk --update --no-cache add bash
     - ./docker-build-package $DISTRO $RELEASE $ARCH mender-client $MENDER_VERSION true
@@ -203,18 +77,13 @@ build:orig:debian:buster:amd64:
     paths:
       - output/*
 
-.template:build:packages:
+build:packages:
   stage: build:packages
   image: docker:git
   tags:
     - mender-qa-worker-generic
   services:
     - docker:dind
-  before_script:
-    - apk --update --no-cache add bash curl aws-cli
-    - eval "$(curl https://raw.githubusercontent.com/mendersoftware/mendertesting/master/mender-ci-common.sh)"
-    - mender_ci_load_tmp_artifact builder-$DISTRO-$RELEASE-$ARCH.tar
-    - docker load -i builder-$DISTRO-$RELEASE-$ARCH.tar
   script:
     - apk --update --no-cache add bash
     - ./docker-build-package $DISTRO $RELEASE $ARCH mender-client $MENDER_VERSION
@@ -229,146 +98,7 @@ build:orig:debian:buster:amd64:
   artifacts:
     paths:
       - output/*
-
-build:packages:debian:buster:amd64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "amd64"
-  dependencies:
-    - build:orig:debian:buster:amd64
-    - build:image:debian:buster:amd64
-  extends: .template:build:packages
-
-build:packages:debian:buster:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:debian:buster:armhf
-  extends: .template:build:packages
-
-build:packages:debian:buster:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "buster"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:debian:buster:arm64
-  extends: .template:build:packages
-
-build:packages:debian:bullseye:amd64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "amd64"
-  dependencies:
-    - build:orig:debian:buster:amd64
-    - build:image:debian:bullseye:amd64
-  extends: .template:build:packages
-
-build:packages:debian:bullseye:armhf:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:debian:bullseye:armhf
-  extends: .template:build:packages
-
-build:packages:debian:bullseye:arm64:
-  variables:
-    DISTRO: "debian"
-    RELEASE: "bullseye"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:debian:bullseye:arm64
-  extends: .template:build:packages
-
-build:packages:ubuntu:bionic:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "amd64"
-  dependencies:
-    - build:orig:debian:buster:amd64
-    - build:image:ubuntu:bionic:amd64
-  extends: .template:build:packages
-
-build:packages:ubuntu:bionic:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:ubuntu:bionic:armhf
-  extends: .template:build:packages
-
-build:packages:ubuntu:bionic:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "bionic"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:ubuntu:bionic:arm64
-  extends: .template:build:packages
-
-build:packages:ubuntu:focal:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "amd64"
-  dependencies:
-    - build:orig:debian:buster:amd64
-    - build:image:ubuntu:focal:amd64
-  extends: .template:build:packages
-
-build:packages:ubuntu:focal:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:ubuntu:focal:armhf
-  extends: .template:build:packages
-
-build:packages:ubuntu:focal:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "focal"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:ubuntu:focal:arm64
-  extends: .template:build:packages
-
-build:packages:ubuntu:jammy:amd64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "jammy"
-    ARCH: "amd64"
-  dependencies:
-    - build:orig:debian:buster:amd64
-    - build:image:ubuntu:jammy:amd64
-  extends: .template:build:packages
-
-build:packages:ubuntu:jammy:armhf:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "jammy"
-    ARCH: "armhf"
-  dependencies:
-    - build:image:ubuntu:jammy:armhf
-  extends: .template:build:packages
-
-build:packages:ubuntu:jammy:arm64:
-  variables:
-    DISTRO: "ubuntu"
-    RELEASE: "jammy"
-    ARCH: "arm64"
-  dependencies:
-    - build:image:ubuntu:jammy:arm64
-  extends: .template:build:packages
+  parallel: !reference [.mender-dist-packages-image-matrix, parallel]
 
 test:check-commits:
   only:
@@ -392,9 +122,9 @@ test:acceptance:
     - mender-qa-worker-generic
   dependencies:
     # Note that we are only testing packages from Debian buster
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
+    - "build:packages: [debian, buster, amd64]"
+    - "build:packages: [debian, buster, armhf]"
+    - "build:packages: [debian, buster, arm64]"
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   before_script:
@@ -467,21 +197,21 @@ test:acceptance:
   stage: publish
   image: debian:buster
   dependencies:
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-    - build:packages:debian:bullseye:amd64
-    - build:packages:debian:bullseye:armhf
-    - build:packages:debian:bullseye:arm64
-    - build:packages:ubuntu:bionic:amd64
-    - build:packages:ubuntu:bionic:armhf
-    - build:packages:ubuntu:bionic:arm64
-    - build:packages:ubuntu:focal:amd64
-    - build:packages:ubuntu:focal:armhf
-    - build:packages:ubuntu:focal:arm64
-    - build:packages:ubuntu:jammy:amd64
-    - build:packages:ubuntu:jammy:armhf
-    - build:packages:ubuntu:jammy:arm64
+    - "build:packages: [debian, buster, amd64]"
+    - "build:packages: [debian, buster, armhf]"
+    - "build:packages: [debian, buster, arm64]"
+    - "build:packages: [debian, bullseye, amd64]"
+    - "build:packages: [debian, bullseye, armhf]"
+    - "build:packages: [debian, bullseye, arm64]"
+    - "build:packages: [ubuntu, bionic, amd64]"
+    - "build:packages: [ubuntu, bionic, armhf]"
+    - "build:packages: [ubuntu, bionic, arm64]"
+    - "build:packages: [ubuntu, focal, amd64]"
+    - "build:packages: [ubuntu, focal, armhf]"
+    - "build:packages: [ubuntu, focal, arm64]"
+    - "build:packages: [ubuntu, jammy, amd64]"
+    - "build:packages: [ubuntu, jammy, armhf]"
+    - "build:packages: [ubuntu, jammy, arm64]"
   before_script:
     - apt update && apt install -yyq awscli
     # Lock the bucket to block concurrent jobs
@@ -546,21 +276,21 @@ publish:production:s3:scripts:install-mender-sh:
   stage: publish
   image: debian:buster
   dependencies:
-    - build:packages:debian:buster:amd64
-    - build:packages:debian:buster:armhf
-    - build:packages:debian:buster:arm64
-    - build:packages:debian:bullseye:amd64
-    - build:packages:debian:bullseye:armhf
-    - build:packages:debian:bullseye:arm64
-    - build:packages:ubuntu:bionic:amd64
-    - build:packages:ubuntu:bionic:armhf
-    - build:packages:ubuntu:bionic:arm64
-    - build:packages:ubuntu:focal:amd64
-    - build:packages:ubuntu:focal:armhf
-    - build:packages:ubuntu:focal:arm64
-    - build:packages:ubuntu:jammy:amd64
-    - build:packages:ubuntu:jammy:armhf
-    - build:packages:ubuntu:jammy:arm64
+    - "build:packages: [debian, buster, amd64]"
+    - "build:packages: [debian, buster, armhf]"
+    - "build:packages: [debian, buster, arm64]"
+    - "build:packages: [debian, bullseye, amd64]"
+    - "build:packages: [debian, bullseye, armhf]"
+    - "build:packages: [debian, bullseye, arm64]"
+    - "build:packages: [ubuntu, bionic, amd64]"
+    - "build:packages: [ubuntu, bionic, armhf]"
+    - "build:packages: [ubuntu, bionic, arm64]"
+    - "build:packages: [ubuntu, focal, amd64]"
+    - "build:packages: [ubuntu, focal, armhf]"
+    - "build:packages: [ubuntu, focal, arm64]"
+    - "build:packages: [ubuntu, jammy, amd64]"
+    - "build:packages: [ubuntu, jammy, armhf]"
+    - "build:packages: [ubuntu, jammy, arm64]"
   before_script:
     - apt update && apt install -yyq awscli
     - *publish_helper_functions
