--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -10,3 +10,5 @@ markers =
     min_mender_artifact_version: Required version of mender-artifact to run the test
     min_mender_monitor_version: Required version of mender-monitor to run the test
     min_mender_gateway_version: Required version of mender-gateway to run the test
+    cppclient: Tests for the C++ client implementation
+    golangclient: Tests for the golang client implementation
