ci: Better split orig and deb packages
Although the motivation for this change is to workaround a limitation in
our pipelines (iow by using the `parallel` matrix all the jobs will get
the artifacts from previous stages, which means that the orig packages
will be passed around), I believe that this split makes sense and keeps
the design cleaner.

Basically we'll have a dedicated directory `orig` for the job that
produces such files, and the builds will consume them from there
(instead of making an ad hoc mv for each build) and save their artifcts
in a different directory (split per job, as before).

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,10 +72,10 @@ build:orig:debian:buster:amd64:
     - ./docker-build-package $DISTRO $RELEASE $ARCH mender-connect $MENDER_CONNECT_VERSION true
     - ./docker-build-package $DISTRO $RELEASE $ARCH mender-configure $MENDER_CONFIGURE_VERSION true
     - ./docker-build-package $DISTRO $RELEASE $ARCH mender-artifact $MENDER_ARTIFACT_VERSION true
-    - find / -name '*.orig.tar.*'
+    - find output -type f
   artifacts:
     paths:
-      - output/*
+      - output/orig
 
 build:packages:
   stage: build:packages
@@ -94,10 +94,11 @@ build:packages:
     -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-gateway $MENDER_GATEWAY_VERSION
     -   ./docker-build-package $DISTRO $RELEASE $ARCH mender-monitor $MENDER_MONITOR_VERSION
     - fi
-    - find output
+    - find output -type f
   artifacts:
     paths:
-      - output/*
+      - output/commercial
+      - output/opensource
   parallel: !reference [.mender-dist-packages-image-matrix, parallel]
 
 test:check-commits:
