--- a/recipes/mender-client/debian-master/control
+++ b/recipes/mender-client/debian-master/control
@@ -11,7 +11,7 @@ Homepage: https://mender.io
 Package: mender-client
 Conflicts: mender
 Architecture: any
-Depends: mender-client, mender-update
+Depends: mender-auth, mender-update
 Description: Mender client
  Mender is an open source over-the-air (OTA) software updater for embedded Linux devices.
 
