--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,8 @@ updates:
     schedule:
       interval: monthly
       day: saturday
+    reviewers:
+      - "mendersoftware/client-dependabot-reviewers"
   - commit-message:
       prefix: chore
     directory: /
@@ -14,3 +16,5 @@ updates:
     schedule:
       interval: monthly
       day: saturday
+    reviewers:
+      - "mendersoftware/client-dependabot-reviewers"
