chore: Remove `MENDER_BOOST_DYN_LINK` definition
This is not needed anymore, it was removed from the upstream code in:
* https://github.com/mendersoftware/mender/commit/04d54e69fdae513520d053480c8bf5b7fa16e1fc

Signed-off-by: Lluis Campos <lluis.campos@northern.tech>

--- a/recipes/mender-client/debian-master/rules
+++ b/recipes/mender-client/debian-master/rules
@@ -4,7 +4,7 @@
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release -D BOOST_ALL_DYN_LINK=ON
+	dh_auto_configure -- -D CMAKE_BUILD_TYPE=Release
 
 override_dh_auto_test:
 	true
