--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -165,7 +165,7 @@ test:acceptance:
     - apk --update --no-cache add python3 py3-pip gcc openssh-client make openssl-dev
       libffi-dev libc-dev python3-dev bash musl-dev rust cargo
     - cd tests
-    - pip3 install -r requirements.txt
+    - pip3 install --break-system-packages -r requirements.txt
     - REFERENCE_DIST=debian-buster-amd64
     - python3 -m pytest -v
       --mender-client-version $MENDER_VERSION
